--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+CHANGES IN VERSION 1.3
+1. Removed support for javapos printing. Printing now is done via registered OS printer.
+2. Added support for gratuity when paying using card.
+3. Fix report printing of manager functions (Drawer pull report/Server tips report).
+4. Tips is now printed on receipt.
+5. Added a button to manually print to kitchen. From home screen, kitchen print can be done by selecting a ticket and then press PRINT TO KITCHEN.
+6. All printing are done using jasper reports, no javapos printing.
+
 Changes in version 1.1
 
 1. Make user id unique.
