--- a/config/messages.properties
+++ b/config/messages.properties
@@ -350,3 +350,4 @@ Switchboard.7=Please enter number of guest
 Switchboard.8=The table is already occupied, what do you want to do?
 Switchboard.9=Please enter a table number
 Switchboard.36=GROUP
+DEFAULT_TIPS_PERCENTAGE=Default Tips Percentage
