--- a/trunk/config/messages.properties
+++ b/trunk/config/messages.properties
@@ -198,7 +198,7 @@ PosMessage.275=Tbl\#:
 PosMessage.276=PAY
 PosMessage.277=OPEN TICKETS
 PosMessage.278=Modifier Group
-PosMessage.279=MDS-POS
+PosMessage.279=Floreant POS
 PosMessage.28=DRAWER PULL
 PosMessage.280=Price is not valid.
 PosMessage.281=Enter
