--- a/config/messages.properties
+++ b/config/messages.properties
@@ -287,6 +287,7 @@ PosMessage.75=Menu Modifiers
 PosMessage.76=Closed
 PosMessage.77=SHUTDOWN
 PosMessage.78=LOGIN
+PosMessage.TERMINAL_SETUP=TERMINAL SETUP
 PosMessage.79=GO
 PosMessage.8=NEVER EXPIRE
 PosMessage.80=Receipt Printer
