--- a/config/messages.properties
+++ b/config/messages.properties
@@ -355,4 +355,32 @@ Switchboard.36=GROUP
 Database.DERBY_SERVER=Derby Server
 Database.DERBY_SINGLE=Derby Single
 Database.MYSQL=MySQL
+DatabaseConfigurationDialog.10=Database Server Address
+DatabaseConfigurationDialog.13=Database Server Port
+DatabaseConfigurationDialog.16=Database Name
+DatabaseConfigurationDialog.19=User Name
+DatabaseConfigurationDialog.22=Database Password
+DatabaseConfigurationDialog.26=Test Connection
+DatabaseConfigurationDialog.27=Save
+DatabaseConfigurationDialog.28=Cancel
+DatabaseConfigurationDialog.29=Create Database Schema
+DatabaseConfigurationDialog.30=span, grow
+DatabaseConfigurationDialog.31=Connection Successfull\!
+DatabaseConfigurationDialog.32=Connection Failed\!
+DatabaseConfigurationDialog.33=This will remove existing database schemas, if exists. Proceed?
+DatabaseConfigurationDialog.34=Warning
+DatabaseConfigurationDialog.35=Database created.
+DatabaseConfigurationDialog.36=Database creation failed.
+DatabaseConfigurationDialog.37=Configure database
+DatabaseConfigurationDialog.38=Configure database
+DatabaseConfigurationDialog.8=Database: 
 DEFAULT_TIPS_PERCENTAGE=Default Tips Percentage
+DrawerPullConfigurationView.DRAWER_PULL_CONFIG=Auto Drawer Pull Configuration
+DrawerPullConfigurationView.MINUTE=Min
+DrawerPullConfigurationView.RESTART_MESSAGE=You must restart POS for the Auto drawer pull change to take effect
+TerminalConfigurationView.10=Print to kitchen on order finish
+TerminalConfigurationView.12=Print to kitchen on order settle
+TerminalConfigurationView.14=Terminal number is not valid
+TerminalConfigurationView.6=Print receipt on order finish
+TerminalConfigurationView.8=Print receipt on order settle
+TerminalConfigurationView.TERMINAL_NUMBER=Terminal number:
