--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -102,7 +102,7 @@ PosMessage.188=Admin
 PosMessage.189=Print receipt when ticket paid
 PosMessage.19=Edit modifier group
 PosMessage.190=Print to kitchen when ticket settled
-PosMessage.191=ENTER YOUR PASSWORD
+PosMessage.191=ENTER SECRET KEY
 PosMessage.192=VOID
 PosMessage.193=Tax Rate
 PosMessage.194=Please select the coupon to delete.
