--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1,3 +1,5 @@
+PosMessage.Error=Error
+Application.0=A database error has occured. Database may not be configured.\nDo you want to configure it now?
 POSConstants.TAX_EXPLORER=Tax Explorer
 PosMessage.0=Edit tax rate
 PosMessage.1=ENTER PAYOUT NOTE
