--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1,6 +1,8 @@
 PosMessage.Error=Error
 Application.0=A database error has occured. Database may not be configured.\nDo you want to configure it now?
 POSConstants.TAX_EXPLORER=Tax Explorer
+POSConstants.TICKET_DELIVERY_DATE=Delivery Date
+POSConstants.TICKET_TYPE=Type
 PosMessage.0=Edit tax rate
 PosMessage.1=ENTER PAYOUT NOTE
 PosMessage.10=Discount
@@ -351,7 +353,7 @@ Switchboard.4=You
 Switchboard.5=You must select two or more ticket for group settle
 Switchboard.6=Please select a ticket from the open ticket list.
 Switchboard.7=Please enter number of guest
-Switchboard.8=The table is already occupied, what do you want to do?
+Switchboard.8=The table is already occupied, do you want to edit existing ticket?
 Switchboard.9=Please enter a table number
 Switchboard.36=GROUP
 Database.DERBY_SERVER=Derby Server
