--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -1,8 +1,8 @@
 PosMessage.Error=Error
 Application.0=A database error has occured. Database may not be configured.\nDo you want to configure it now?
 POSConstants.TAX_EXPLORER=Tax Explorer
-POSConstants.TICKET_DELIVERY_DATE=Delivery Date
-POSConstants.TICKET_TYPE=Type
+POSConstants.TICKET_DELIVERY_DATE=DELIVERY DATE
+POSConstants.TICKET_TYPE=TYPE
 PosMessage.0=Edit tax rate
 PosMessage.1=ENTER PAYOUT NOTE
 PosMessage.10=Discount
