--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -121,7 +121,7 @@ PosMessage.200=MISC ITEM
 PosMessage.201=Table number
 PosMessage.202=ACTIVE TICKETS (BEFORE DRAWER RESET)
 PosMessage.203=DUE
-PosMessage.204=Table \#
+PosMessage.204=Table\#
 PosMessage.205=Modifier Groups
 PosMessage.206=Category
 PosMessage.207=Ok
@@ -150,7 +150,7 @@ PosMessage.227=From
 PosMessage.228=MISC
 PosMessage.229=COUPON_VALUE
 PosMessage.23=Payroll Report
-PosMessage.230=Guests: 
+PosMessage.230=Guests
 PosMessage.231=Others
 PosMessage.232=CASHIER
 PosMessage.233=Dollar
