--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -393,7 +393,7 @@ RECEIPT_REPORT_TICKET_NO_LABEL=CHK\#:
 RECEIPT_REPORT_TABLE_NO_LABEL=Table\#: 
 RECEIPT_REPORT_GUEST_NO_LABEL=Guests: 
 RECEIPT_REPORT_SERVER_LABEL=Server: 
-RECEIPT_REPORT_DATE_LABEL=Date: 
+RECEIPT_REPORT_DATE_LABEL=Printed on: 
 RECEIPT_REPORT_ITEM_LABEL=ITEM
 RECEIPT_REPORT_QUANTITY_LABEL=QTY
 RECEIPT_REPORT_SUBTOTAL_LABEL=SUB
