--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -393,7 +393,7 @@ RECEIPT_REPORT_TICKET_NO_LABEL=CHK\#:
 RECEIPT_REPORT_TABLE_NO_LABEL=Table\#: 
 RECEIPT_REPORT_GUEST_NO_LABEL=Guests: 
 RECEIPT_REPORT_SERVER_LABEL=Server: 
-RECEIPT_REPORT_DATE_LABEL=Printed on: 
+RECEIPT_REPORT_DATE_LABEL=Printed: 
 RECEIPT_REPORT_ITEM_LABEL=ITEM
 RECEIPT_REPORT_QUANTITY_LABEL=QTY
 RECEIPT_REPORT_SUBTOTAL_LABEL=SUB
@@ -404,4 +404,5 @@ RECEIPT_REPORT_SERVICE_CHARGE_LABEL=Service Charge
 RECEIPT_REPORT_TIPS_LABEL=Tips 
 RECEIPT_REPORT_NETAMOUNT_LABEL=Net Amount 
 RECEIPT_REPORT_PAIDAMOUNT_LABEL=Paid Amount 
-RECEIPT_REPORT_CHANGEAMOUNT_LABEL=Change Amount 
+RECEIPT_REPORT_DUEAMOUNT_LABEL=Due Amount 
+RECEIPT_REPORT_CHANGEAMOUNT_LABEL=Change Due 
