--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -239,7 +239,7 @@ PosMessage.310=Invalid number
 PosMessage.311=COOKING INSTRUCTIONS
 PosMessage.32=Are you sure you want to set tax exempt?
 PosMessage.33=ITEMS WASTED
-PosMessage.34=An error has occured, could not save
+PosMessage.34=An error has occurred, could not save
 PosMessage.35=Current Sale (After Drawer Reset)
 PosMessage.36=Start Time
 PosMessage.37=CREATED
@@ -364,7 +364,6 @@ DatabaseConfigurationDialog.26=Test Connection
 DatabaseConfigurationDialog.27=Save
 DatabaseConfigurationDialog.28=Cancel
 DatabaseConfigurationDialog.29=Create Database Schema
-DatabaseConfigurationDialog.30=span, grow
 DatabaseConfigurationDialog.31=Connection Successfull\!
 DatabaseConfigurationDialog.32=Connection Failed\!
 DatabaseConfigurationDialog.33=This will remove existing database schemas, if exists. Proceed?
