--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -365,6 +365,7 @@ DatabaseConfigurationDialog.26=Test Connection
 DatabaseConfigurationDialog.27=Save
 DatabaseConfigurationDialog.28=Cancel
 DatabaseConfigurationDialog.29=Create Database Schema
+UPDATE_DATABASE=UPDATE DATABASE
 DatabaseConfigurationDialog.31=Connection Successfull\!
 DatabaseConfigurationDialog.32=Connection Failed\!
 DatabaseConfigurationDialog.33=This will remove existing database schemas, if exists. Proceed?
