--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -1,5 +1,13 @@
 #Eclipse messages class
 #Sun Mar 15 23:57:09 BDT 2015
+
+DINE_IN=DINE IN
+TAKE_OUT=TAKE OUT
+PICKUP=PICKUP
+HOME_DELIVERY=HOME DELIVERY
+DRIVE_THRU=DRIVE THRU
+BAR_TAB=BAR_TAB
+
 ADD_GRATUITY_TEXT=ADD GRATUITY
 Application.0=A database error has occured. Database may not be configured.\nDo you want to configure it now?
 BUTTON_COLOR=Button Color
