--- a/trunk/i18n/messages.properties
+++ b/trunk/i18n/messages.properties
@@ -1,6 +1,9 @@
 #Eclipse messages class
 #Sun Mar 15 23:57:09 BDT 2015
 
+Logout=Logout
+Clockout=Clock Out
+Shutdown=Shutdown
 DINE_IN=DINE IN
 TAKE_OUT=TAKE OUT
 PICKUP=PICKUP
