--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -30,7 +30,7 @@ MORE_ACTIVITY_BUTTON_TEXT=MORE
 TABLE_MANAGE_BUTTON_TEXT=TABLE MANAGE
 ONLINE_TICKET_BUTTON_TEXT=ONLINE TICKETS
 
-NEW_ORDER_PANEL_LABEL=NEW
+NEW_ORDER_PANEL_LABEL=NEW ORDER
 
 
 DINE_IN_BUTTON_TEXT=DINE IN
