--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -9,7 +9,7 @@ TAKE_OUT=TAKE OUT
 PICKUP=PICKUP
 HOME_DELIVERY=HOME DELIVERY
 DRIVE_THRU=DRIVE THRU
-BAR_TAB=BAR_TAB
+BAR_TAB=BAR TAB
 
 CashierSwitchBoardView.LABEL_ORDER=ORDER
 
