--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -3,7 +3,7 @@ _BaseRootDAO.2=' has not been initialized (or an error occured during initializa
 _BaseRootDAO.3=The session factory for '
 _BaseRootDAO.4=' has not been initialized (or an error occured during initialization)
 #Eclipse messages class
-#Sun Mar 15 23:57:09 BDT 2015
+#Sun Mar 15 23:57:09 BDT 2015 TEST
 
 _BaseRootDAO.0=The session factory has not been initialized (or an error occured during initialization)
 LoginPasswordEntryView.13=LOGIN
