-Added Delivery Config to Configuration View. -Added DeliveryConfiguration Model and load unitName in application. -Added Delivery Charge in Receipt print. -Added Delivery Charge in Drawer pull Status in Other Function.
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1232 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -364,6 +364,7 @@ BUTTON_COLOR=Button Color
 CONFIGURATION_WINDOW_TITLE=Configuration
 CONFIG_TAB_DRAWERPULL=Drawer Pull
 CONFIG_TAB_PRINT=Print
+CONFIG_TAB_DELIVERY=Delivery Config
 CONFIG_TAB_RESTAURANT=Restaurant
 CONFIG_TAB_TAX=Tax
 ConfirmPayDialog.0=CONFIRM
@@ -537,6 +538,7 @@ DrawerPullReportDialog.39=TIPS PAID
 DrawerPullReportDialog.43=CASH BACK
 DrawerPullReportDialog.47=BEGIN CASH
 DrawerPullReportDialog.5=SALES TAX
+SALES_DELIVERY_CHARGE=DELIVERY CHARGE
 DrawerPullReportDialog.51=DRAWER ACCOUNTABLE
 DrawerPullReportDialog.53=CASH TO DEPOSIT
 DrawerPullReportDialog.54==== EXCEPTIONS ===
@@ -1175,6 +1177,7 @@ RECEIPT_REPORT_PAIDAMOUNT_LABEL=Paid Amount
 RECEIPT_REPORT_QUANTITY_LABEL=QTY
 RECEIPT_REPORT_SERVER_LABEL=Server\: 
 RECEIPT_REPORT_SERVICE_CHARGE_LABEL=Service Charge 
+RECEIPT_REPORT_DELIVERY_CHARGE_LABEL=Delivery Charge 
 RECEIPT_REPORT_SUBTOTAL_LABEL=SUB
 RECEIPT_REPORT_TABLE_NO_LABEL=Table\#\: 
 RECEIPT_REPORT_TAX_LABEL=Tax 
