-Rename pickup form hotel to customer will pickup
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1248 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -933,6 +933,7 @@ PosMessage.262=Copy
 PosMessage.263=ALL
 PosMessage.264=PAY TIPS
 PosMessage.265=Cooking Instructions
+BUMP=BUMP
 PosMessage.266=Last Name
 PosMessage.267=Type Name
 ORDER_TYPE=Order Type
@@ -1188,7 +1189,7 @@ RECEIPT_REPORT_TOTAL_LABEL=Total
 ReceiptPrintService.0=Customer: 
 ReceiptPrintService.1=Total Refund
 ReceiptPrintService.10=KTICHEN RECEIPT
-ReceiptPrintService.111=Pickup from hotel
+ReceiptPrintService.111=Customer will Pick up
 ReceiptPrintService.115=*** KITCHEN RECEIPT *** 
 ReceiptPrintService.119=Printed: 
 ReceiptPrintService.2=Cash Refund
