--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -5,7 +5,7 @@ _BaseRootDAO.4=' has not been initialized (or an error occured during initializa
 #Eclipse messages class
 #Sun Mar 15 23:57:09 BDT 2015 TEST
 MessageDialog.0=Error
-GenericErrorMessage=We are sorry, and unexpected error has occuered
+GenericErrorMessage=We are sorry, an unexpected error has occured
 _BaseRootDAO.0=The session factory has not been initialized (or an error occured during initialization)
 LoginPasswordEntryView.19=TERMINAL ID: 
 LoginView.0=TERMINAL ID:
@@ -16,7 +16,7 @@ LoginView.2=ENTER SECRET KEY
 LoginView.20=To be implemented
 LoginView.3=User not found
 LoginView.4=Cannot open database connection, please check database configuration.
-LoginView.5=We are sorry, and unexpected error has occuered
+LoginView.5=We are sorry, an unexpected error has occured
 LoginView.6=TERMINAL ID:
 Logout=Logout
 ADD_ON=ADD-ONs
@@ -143,8 +143,8 @@ ManualCardEntryDialog.15=SUBMIT
 ManualCardEntryDialog.16=CANCEL
 ManualCardEntryDialog.17=Enter Card Manually
 ManualCardEntryDialog.3=Card Number
-ManualCardEntryDialog.6=Expiery Month
-ManualCardEntryDialog.9=Expiery Year
+ManualCardEntryDialog.6=Expiry Month
+ManualCardEntryDialog.9=Expiry Year
 AboutAction.0=About
 AboutDialog.0=About
 AboutDialog.5=OK
@@ -155,7 +155,7 @@ ActionHistory.2=SPLIT CHECK
 ActionHistory.3=VOID CHECK
 ActionHistory.4=REOPEN CHECK
 ActionHistory.5=SETTLE CHECK
-ActionHistory.6=PRINT RECRIPT
+ActionHistory.6=PRINT RECEIPT
 ActionHistory.7=PAY CHECK
 ActionHistory.8=GROUP SETTLE
 ActionHistory.9=PAY OUT
@@ -1189,7 +1189,7 @@ RECEIPT_REPORT_TOTAL_LABEL=Total
 ReceiptPrintService.0=Customer: 
 ReceiptPrintService.1=Total Refund
 ReceiptPrintService.10=KTICHEN RECEIPT
-ReceiptPrintService.111=Customer will Pick up
+ReceiptPrintService.111=Pickup from hotel
 ReceiptPrintService.115=*** KITCHEN RECEIPT *** 
 ReceiptPrintService.119=Printed: 
 ReceiptPrintService.2=Cash Refund
@@ -1241,7 +1241,7 @@ SettleTicketDialog.16=Invalid card string
 SettleTicketDialog.17=Invalid authorization code
 SettleTicketDialog.18=Loyalty discount already added.
 SettleTicketDialog.19=Enter loyalty id:
-SettleTicketDialog.21=Congrations\! you have discounts from Kala Loyalty Check discounts list for more.
+SettleTicketDialog.21=Congratulations\! you have discounts from Kala Loyalty. Check discounts list for more.
 SettleTicketDialog.22=Error setting My Kala discount.
 SettleTicketDialog.3=Table
 SettleTicketDialog.5=Tips
