-Added Filters for delivery tickets. -Remove void option from kitchen display.
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1250 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -931,6 +931,8 @@ PosMessage.260=Beverage
 PosMessage.261=Menu Item explorer
 PosMessage.262=Copy
 PosMessage.263=ALL
+TODAY=TODAY
+TOMORROW=TOMORROW
 PosMessage.264=PAY TIPS
 PosMessage.265=Cooking Instructions
 BUMP=BUMP
