-Drawer amount entry dialog parent's has been changed to POS window. -Custom payment report has been implemented and added to back office report explorer.
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1541 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -737,6 +737,7 @@ PosMessage.14=User Types
 PosMessage.140=Modifier group is required.
 PosMessage.141=User ID
 PosMessage.142=Credit Card Report
+CUSTOM_PAYMENT_REPORT=Custom Payment Report
 PosMessage.143=Permissions
 PosMessage.144=Close
 PosMessage.145=A shift with that name already exists
