FP-197: Externalize all strings
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1542 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -7,6 +7,7 @@ _BaseRootDAO.4=' has not been initialized (or an error occured during initializa
 MessageDialog.0=Error
 GenericErrorMessage=We are sorry, an unexpected error has occured
 _BaseRootDAO.0=The session factory has not been initialized (or an error occured during initialization)
+LoginPasswordEntryView.15=
 LoginPasswordEntryView.19=TERMINAL ID: 
 LoginView.0=TERMINAL ID:
 LoginView.1=LOGIN
@@ -27,6 +28,7 @@ ClockInOutAction.11=User
 ClockInOutAction.13=\ is already clocked in.
 ClockInOutAction.14=User 
 ClockInOutAction.16=\ is clocked in.
+ClockInOutAction.2=Please first clock in.
 ClockInOutAction.3=ENTER SECRET KEY
 ClockInOutAction.4=SELECT ACTION
 ClockInOutAction.5=CLOCK IN
@@ -76,7 +78,6 @@ DRIVE_THRU=DRIVE THRU
 BAR_TAB=BAR TAB
 
 CardConfig.13=Merchant gateway is not configured
-CardConfigurationView.0=Don't have any Authorize.net Account? Get it here
 CardConfigurationView.1=Bar tab limit
 CardConfigurationView.10=%
 CardConfigurationView.19=Merchant Account
@@ -113,10 +114,15 @@ CategoryView.4=Cleared category buttons
 
 BACK_OFFICE_BUTTON_TEXT=BACK OFFICE
 BackOfficeWindow.0=Help
+BackOfficeWindow.1=Pizza
+BackOfficeWindow.2=Floor Plan
 BaseMenuModifierGroupDAO.0=name
 INVENTORY_MENU_TEXT=Inventory
 NEW_ORDER_BUTTON_TEXT=NEW
 EDIT_TICKET_BUTTON_TEXT=EDIT
+EmployeeAttendanceAction.0=Employee Attendance Report
+EmployeeAttendanceAction.1=Attendance Report
+EmployeeAttendanceAction.2=Attendance Report
 GiftCertDialog.0=Gift Cert
 GiftCertDialog.1=Enter Gift Certificate Detail
 GiftCertDialog.14=Please enter gift certificate number
@@ -163,6 +169,8 @@ ActionHistoryDAO.0=Error occured while trying to save action history
 AUTHORIZE_BUTTON_TEXT=AUTHORIZE
 KITCHEN_DISPLAY_BUTTON_TEXT=KITCHEN DISPLAY
 KitchenDisplayView.0=KD
+KitchenDisplayView.1=Back
+KitchenDisplayView.2=Filter
 KitchenDisplayView.4=Filters
 KitchenDisplayView.5=Printer
 KitchenDisplayView.6=Order type
@@ -170,7 +178,7 @@ KitchenDisplayView.7=LOG OUT
 KitchenDisplayWindow.0=Kitchen Display
 KitchenTicketStatusSelector.0=Kitchen item status selector
 KitchenTicketStatusSelector.1=Select item status
-KitchenTicketView.11=BUMP
+KitchenTicketStatusSelector.2=BUMP
 KitchenTicketView.12=VOID
 KitchenTicketView.13=Name
 KitchenTicketView.14=Qty
@@ -182,6 +190,9 @@ REOPEN_TICKET_BUTTON_TEXT=REOPEN
 REORDER_TICKET_BUTTON_TEXT=REORDER
 SETTLE_TICKET_BUTTON_TEXT=SETTLE
 SPLIT_TICKET_BUTTON_TEXT=SPLIT
+ViewChangeAction.0=Unpaid orders must be paid or void before you leave
+ViewChangeAction.1=Do you to save the changes?
+ViewChangeAction.2=Save Ticket
 VirtualPrinterConfigDialog.0=Add/Edit Virtual Printer
 VirtualPrinterConfigDialog.10=CANCEL
 VirtualPrinterConfigDialog.11=Please provide a name
@@ -206,6 +217,7 @@ OpenTicketSummaryReport.0=Open Ticket Summary
 
 SEARCH_ITEM_BUTTON_TEXT=SEARCH ITEM
 
+UpdateAction.7=Update
 Updated=UPDATED
 REFRESH=REFRESH
 
@@ -295,6 +307,24 @@ PayOutView.0=Enter pay out recepient
 PayOutView.10=Enter pay out reason
 PayOutView.5=NOTE
 PayrollReportView.0=PayrollReport
+PeripheralConfigurationView.0=Customer Display Port
+PeripheralConfigurationView.1=Text Message
+PeripheralConfigurationView.15=SCALE DISPLAY
+PeripheralConfigurationView.16=Active scale Input
+PeripheralConfigurationView.17=Test
+PeripheralConfigurationView.18=COM7
+PeripheralConfigurationView.20=Scale Port
+PeripheralConfigurationView.23=CALLER ID DEVICE
+PeripheralConfigurationView.24=Enable caller id device
+PeripheralConfigurationView.4=CASH DRAWER
+PeripheralConfigurationView.5=CUSTOMER DISPLAY
+PeripheralConfigurationView.6=Active customer display
+PeripheralConfigurationView.7=Test
+PizzaCrustExplorerAction.0=Pizza Crust
+PizzaItemExplorerAction.0=Pizza Items
+PizzaItemExplorerAction.1=Pizza Item Explorer
+PizzaModifierExplorerAction.0=Pizza Modifier
+PizzaModifierExplorerAction.1=Pizza Modifier Explorer
 
 TICKET_LIST_COLUMN_ID=ID
 TICKET_LIST_COLUMN_TABLE=TBL
@@ -319,6 +349,7 @@ AddPrinterDialog.4=Virtual Printer
 AddPrinterDialog.7=NEW
 AddPrinterDialog.9=Device
 AddPrinterGroupDialog.0=Add/Edit Printer Group
+AddPrinterGroupDialog.1=Default
 AddPrinterGroupDialog.10=Name is empty
 AddPrinterGroupDialog.11=Please select at least one printer
 AddPrinterGroupDialog.12=CANCEL
@@ -327,12 +358,29 @@ AddPrinterGroupDialog.5=grow
 AddPrinterGroupDialog.6=Printers
 AddPrinterGroupDialog.9=OK
 Application.0=A database error has occured. Database may not be configured.\nDo you want to configure it now?
+Application.1=What do you want to do?
+Application.19=ENTER SECRET KEY
+Application.2=Confirm
+Application.20=LOGIN
+Application.3=RESTART
 Application.4=Another FloreantPOS instance may be already running.\n
 Application.40=Multiple instances cannot be run in Derby single mode
 Application.41=Tax is included in item price
 Application.42=Tax is not included in item price
 Application.43=You are currently clocked out. Do you want to be clocked in too?
 Application.44=Confirm
+Application.5=SHUTDOWN
+Application.6=CANCEL
+AttendanceHistoryAction.0=Attendance History
+AttendanceHistoryAction.1=Attendance History
+AttendanceHistoryAction.2=Attendance History
+AttendanceHistoryExplorer.0=Add
+AttendanceHistoryExplorer.1=Edit
+AttendanceHistoryExplorer.2=Delete
+AttendanceHistoryExplorer.3=Print
+AttendanceHistoryExplorer.4=Select a row to edit
+AttendanceHistoryExplorer.5=Edit clock in/out time
+AttendanceHistoryExplorer.6=Add clock in/out time
 AttendenceHistoryDAO.2=Error while calculating number of clocked in user
 AttendenceHistoryDAO.5=Error while calculating number of clocked in user
 AttendenceHistoryDAO.6=Unnable to payroll
@@ -465,6 +513,7 @@ DbPanel.16=User
 DbPanel.20=Password
 DbPanel.4=Server address
 DbPanel.8=Port
+DefaultMerchantGatewayConfigurationView.1=Don't have any Authorize.net Account? Get it here
 DefaultOrderServiceExtension.0=Order Handler
 DefaultOrderServiceExtension.1=Default order handler
 DefaultOrderServiceExtension.10=Proceed without table?
@@ -545,6 +594,8 @@ DrawerPullReportDialog.55==== VOIDS/REFUNDS (Without Tax) ===
 DrawerPullReportDialog.7=TOTAL REVENUES
 DrawerPullReportDialog.8=PRINT
 DrawerPullReportDialog.99=CODE
+DrawerPullReportExplorer.0=Print
+DrawerPullReportExplorer.1=Please select a row to print
 DrawerUtil.0=Start kicking drawer\n
 DrawerUtil.1=End kicking drawer\n
 LABEL_BUY_PRICE=Buy Price
@@ -625,8 +676,11 @@ MenuItemPriceByOrderTypeDialog.0=Ok
 MenuItemPriceByOrderTypeDialog.21=Cancel
 MenuItemPriceByOrderTypeDialog.6=Order type:
 MenuItemPriceByOrderTypeDialog.7=Tax:
+MenuItemSizeExplorerAction.0=Size
+
 
 MenuCategoryExplorer.0=<html><center>This category is associated with menu group.<br>  Are you sure you want to delete?</center></html>
+MenuCategoryExplorer.1=TEXT COLOR
 MenuCategoryForm.1=Sort order
 MenuCategoryForm.2=Button color
 MenuCategoryForm.7=Translated name
@@ -636,6 +690,7 @@ MenuCategoryForm.22=Choose text color
 MenuCategoryForm.26=Name cannot be blank
 
 MenuGroupExplorer.0=<html><center>This menu group is associated with menu item.<br>  Are you sure you want to delete?</center></html>
+MenuGroupExplorer.1=TEXT COLOR
 MenuGroupForm.6=Translated name
 MenuGroupForm.12=Sort order
 MenuGroupForm.15=Button color
@@ -939,6 +994,7 @@ BUMP=BUMP
 PosMessage.266=Last Name
 PosMessage.267=Type Name
 ORDER_TYPE=Order Type
+OtherConfigurationView.0=Map API Key: 
 PosMessage.269=CASH TRANSACTION
 PosMessage.27=Modifier Group explorer
 PosMessage.270=ENTER VOID REASON
@@ -1020,6 +1076,12 @@ PosMessage.59=Tel
 PosMessage.6=Capacity
 PosMessage.60=SERVER
 CUSTOMER_SELECTION_BUTTON_TEXT=CUSTOMER
+CurrencyDialog.0=Edit Currency
+CurrencyDialog.2=Please select main currency.
+CurrencyDialog.3=Main currency exchange rate must be 1. Do you want to change it to 1?
+CurrencyDialog.4=Confirm
+CurrencyExplorerAction.0=Currency
+CurrencyExplorerAction.1=Floreant POS
 CustomerForm.0=Salutation
 CustomerForm.10=Picture
 CustomerForm.11=Last Name
@@ -1072,6 +1134,7 @@ CustomerSelectionDialog.28=SELECT
 CustomerSelectionDialog.29=CANCEL
 CustomerSelectionDialog.3=Select Customer
 CustomerSelectionDialog.32=Confirm
+CustomerSelectorDialog.0=SELECT CUSTOMER
 CustomPaymentBrowser.0=Id
 CustomPaymentBrowser.1=Name
 CustomPaymentBrowser.2=Reference field name
@@ -1158,12 +1221,18 @@ PosMessage.Error=Error
 PosMessage.TERMINAL_SETUP=TERMINAL SETUP
 PosPrintService.4=User: 
 PrintConfigurationView.0=No printer is installed on your operating system. Please install printer and come back again.
+PrintConfigurationView.1=sec
 PrintConfigurationView.11=Kitchen Printers
 PrintConfigurationView.13=Printer Groups
 PrintConfigurationView.4=Report Printer
+PrintConfigurationView.6=Kitchen Display
+PrintConfigurationView.7=Yellow Time Out: 
 PrintConfigurationView.8=Receipt Printer:
+PrintConfigurationView.9=Red Time Out: 
 PrinterGroupView.0=Add
+PrinterGroupView.0=Cannot Delete..
 PrinterGroupView.1=Edit
+PurchaseReportAction.0=Purchase Report
 QuickCustomerForm.0=State
 QuickCustomerForm.1=Please provide either name or mobile number
 QwertyKeyPad.0=SPACE
@@ -1231,6 +1300,7 @@ RestaurantConfigurationView.54=Ticket footer message
 RestaurantConfigurationView.7=Address line 1
 SORT_ORDER=Sort Order
 IMAGE_ICON=Image
+InventoryOnHandReportAction.0=Inventory On Hand Report
 SelectionView.0=BACK
 SelectionView.1=NEXT
 SelectionView.2=PREV
@@ -1251,6 +1321,12 @@ SettleTicketDialog.5=Tips
 SettleTicketDialog.6=Settle ticket
 SettleTicketDialog.7=You do not have permission to execute this action
 SettleTicketDialog.8=Payment Type Selector
+SetUpWindow.0=Sucessfully saved.
+SetUpWindow.16=Admin User
+SetUpWindow.20=Terminal
+SetUpWindow.21=Terminal Id
+SetUpWindow.22=Enable auto logoff
+SetUpWindow.3=Database Configuration
 SplitTicketDialog.0=ORIGINAL TICKET ID: TICKET_ID
 SwipeCardDialog.0=Swipe card here
 SwipeCardDialog.1=MANUAL ENTRY
@@ -1336,10 +1412,16 @@ TerminalConfigurationView.2=Show translated item name in UI
 TerminalConfigurationView.20=Button font size
 TerminalConfigurationView.21=Show barcode on receipt
 TerminalConfigurationView.22=CASH DRAWER
+TerminalConfigurationView.23=
+TerminalConfigurationView.24=Terminal Location
 TerminalConfigurationView.25=Drawer port
+TerminalConfigurationView.26=Please restart system for the configuration to take effect.
 TerminalConfigurationView.27=Drawer control codes
+TerminalConfigurationView.28=RESTART
 TerminalConfigurationView.29=
 TerminalConfigurationView.3=Kiosk Mode
+TerminalConfigurationView.30=OK
+TerminalConfigurationView.31=Confirm
 TerminalConfigurationView.32=RESTORE DEFAULT
 TerminalConfigurationView.34=Drawer initial balance
 TerminalConfigurationView.38=Please make sure button size is at least 20
@@ -1349,7 +1431,7 @@ TerminalConfigurationView.40=Please restart system for the configuration to take
 TerminalConfigurationView.47=Terminal
 TerminalConfigurationView.5=Show database configuration button on login screen
 TerminalConfigurationView.6=Print receipt on order finish
-TerminalConfigurationView.7=Enable auto logoff
+TerminalConfigurationView.7=
 TerminalConfigurationView.8=Print receipt on order settle
 TerminalConfigurationView.9=Default password length
 TerminalConfigurationView.TERMINAL_NUMBER=Terminal number\:
@@ -1358,6 +1440,9 @@ TerminalSetupDialog.10=Save
 TerminalSetupDialog.12=Close
 TerminalSetupDialog.4=Save
 TerminalSetupDialog.6=Close
+Ticket.1=
+Ticket.18=
+Ticket.20=
 TicketAuthorizationDialog.0=Authorize tickets
 TicketAuthorizationDialog.1=Confirm
 TicketAuthorizationDialog.10=. The record may be broken.
