fixed externalization of permission name
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1544 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1600,11 +1600,17 @@ UserPermission.21=Modify Printed Ticket
 UserPermission.22=Booking
 UserPermission.3=Void Ticket
 UserPermission.4=Perform Administrative Task
-UserPermission.5=Perform Manager Task
+UserPermission.5=Perform Managerial Task
 UserPermission.6=View Back Office
 UserPermission.7=Authorize Tickets
 UserPermission.8=Drawer Assignment
 UserPermission.9=Drawer Pull
+UserPermission.Transfer_Ticket=Transfer Ticket
+UserPermission.Kitchen_Display=View Kitchen Display
+UserPermission.Special_Functions=Special Functions
+UserPermission.Hold_Ticket=Hold Ticket
+UserPermission.View_All_Close_Tickets=View All Close Tickets
+
 UserTransferDialog.0=User Selector
 UserTransferDialog.1=Select user to transfer
 UserTransferDialog.3=Success
