--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -179,6 +179,7 @@ KitchenDisplayWindow.0=Kitchen Display
 KitchenTicketStatusSelector.0=Kitchen item status selector
 KitchenTicketStatusSelector.1=Select item status
 KitchenTicketStatusSelector.2=BUMP
+KitchenTicketView.11=BUMP
 KitchenTicketView.12=VOID
 KitchenTicketView.13=Name
 KitchenTicketView.14=Qty
@@ -1412,13 +1413,11 @@ TerminalConfigurationView.2=Show translated item name in UI
 TerminalConfigurationView.20=Button font size
 TerminalConfigurationView.21=Show barcode on receipt
 TerminalConfigurationView.22=CASH DRAWER
-TerminalConfigurationView.23=
 TerminalConfigurationView.24=Terminal Location
 TerminalConfigurationView.25=Drawer port
 TerminalConfigurationView.26=Please restart system for the configuration to take effect.
 TerminalConfigurationView.27=Drawer control codes
 TerminalConfigurationView.28=RESTART
-TerminalConfigurationView.29=
 TerminalConfigurationView.3=Kiosk Mode
 TerminalConfigurationView.30=OK
 TerminalConfigurationView.31=Confirm
@@ -1431,7 +1430,6 @@ TerminalConfigurationView.40=Please restart system for the configuration to take
 TerminalConfigurationView.47=Terminal
 TerminalConfigurationView.5=Show database configuration button on login screen
 TerminalConfigurationView.6=Print receipt on order finish
-TerminalConfigurationView.7=
 TerminalConfigurationView.8=Print receipt on order settle
 TerminalConfigurationView.9=Default password length
 TerminalConfigurationView.TERMINAL_NUMBER=Terminal number\:
@@ -1440,9 +1438,6 @@ TerminalSetupDialog.10=Save
 TerminalSetupDialog.12=Close
 TerminalSetupDialog.4=Save
 TerminalSetupDialog.6=Close
-Ticket.1=
-Ticket.18=
-Ticket.20=
 TicketAuthorizationDialog.0=Authorize tickets
 TicketAuthorizationDialog.1=Confirm
 TicketAuthorizationDialog.10=. The record may be broken.
