FP-165: A column for Date needed while Authorizing added date column
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1572 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -573,7 +573,7 @@ DrawerPullReportDialog.120=Ration
 DrawerPullReportDialog.122=Error while printing\n
 DrawerPullReportDialog.1=Time: 
 DrawerPullReportDialog.15=DRAWER PULL
-DrawerPullReportDialog.16=TERMINAL \#: 
+DrawerPullReportDialog.16=TERMINAL \#\: 
 DrawerPullReportDialog.2=\ SALES BALANCE 
 DrawerPullReportDialog.23=GIFT CERT. CHANGE
 DrawerPullReportDialog.25=CASH BACK
@@ -1231,7 +1231,6 @@ PrintConfigurationView.6=Kitchen Display
 PrintConfigurationView.7=Yellow Time Out: 
 PrintConfigurationView.8=Receipt Printer:
 PrintConfigurationView.9=Red Time Out: 
-PrinterGroupView.0=Add
 PrinterGroupView.0=Cannot Delete..
 PrinterGroupView.1=Edit
 PurchaseReportAction.0=Purchase Report
@@ -1528,6 +1527,7 @@ TransactionListView.4=TIPS
 TransactionListView.5=AMOUNT
 TransactionListView.6=TOTAL
 TransactionListView.7=Please select an item
+TransactionListView.8=DATE
 Translated_Name=Translated Name
 UPDATE_DATABASE=UPDATE DATABASE
 User.0=MANAGER
@@ -1572,12 +1572,9 @@ UserForm.49=Cost per hour for
 UserForm.7=ID
 UserForm.9=Phone
 UserListDialog.0=SELECT USER
-UserListDialog.0=SELECT USER
 UserListDialog.1=SELECT
 UserListDialog.3=SELECT
 UserListDialog.4=Please select user
-UserListDialog.4=Please select user
-UserListDialog.5=CANCEL
 UserListDialog.5=CANCEL
 UserPermission.0=Create New Ticket
 UserPermission.1=View All Open Ticket
