-Added menu item, group and category quick maintenance option. -Added quick maintenance enable and disable option in terminal configuration. -Added user permission for quick maintenance.
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1587 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1591,6 +1591,12 @@ UserPermission.2=Edit Ticket
 UserPermission.20=Manage Table Layout
 UserPermission.21=Modify Printed Ticket
 UserPermission.22=Booking
+UserPermission.23=Transfer Ticket
+UserPermission.24=Kitchen Display
+UserPermission.25=All Functions
+UserPermission.26=Hold Ticket
+UserPermission.27=View All Close Tickets
+Quick_Maintenance=Quick Maintenance
 UserPermission.3=Void Ticket
 UserPermission.4=Perform Administrative Task
 UserPermission.5=Perform Manager Task
