-Added modifier and pizza multiplier functionality. -Added multiplier model, explorer and form and access from back office explorer.
git-svn-id: svn://svn.code.sf.net/p/floreantpos/code/trunk@1633 37e33ebe-f127-4a38-aa86-8919ee84a29d

--- a/i18n/messages.properties
+++ b/i18n/messages.properties
@@ -1033,7 +1033,7 @@ PosMessage.299=By Range - Actual
 PosMessage.3=Out of memory, please restart the application
 PosMessage.30=No Shift is configured for this time, you cannot login
 PosMessage.300=Coupons & Discounts
-PosMessage.301=Extra Price
+PosMessage.301=Over Limit Price
 PosMessage.302=Auto drawer pull every day at\:
 PosMessage.303=SELECT PAY OUT RECEPIENT
 PosMessage.304=CATEGORIES
